// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon List block saved block HTML shouldn't change 1`] = `
<BlockContentProvider
  innerBlocks={Array []}
>
  <Unknown
    className="wp-block-ugb-icon-list ugb-icon-list ugb-icon--icon-cross ugb-icon--columns-0 className"
    format="string"
    style={
      Object {
        "--gap": "8px",
        "--icon": "url('data:image/svg+xml;base64,PGRpdj48L2Rpdj4=')",
        "--icon-size": "10px",
      }
    }
    tagName="ul"
    value="<li>text</li>"
  />
</BlockContentProvider>
`;

exports[`Icon List block saved default block HTML shouldn't change 1`] = `
<BlockContentProvider
  innerBlocks={Array []}
>
  <Unknown
    className="wp-block-ugb-icon-list ugb-icon-list ugb-icon--icon-check ugb-icon--columns-1"
    format="string"
    style={
      Object {
        "--gap": "16px",
        "--icon": "url('data:image/svg+xml;base64,PGRpdj48L2Rpdj4=')",
        "--icon-size": "20px",
      }
    }
    tagName="ul"
    value=""
  />
</BlockContentProvider>
`;
